# Agentry

./: .env.example  .file-icons-plan.md  .gitignore  .icons-implementation-summary.md  .temp_icons.js  CONTRIBUTING.md  DOCS_SETUP_COMPLETE.md  Dockerfile  GAP_ANALYSIS.md  INTEGRATION_PATCH.py  LICENSE  QUICK_START.md  README.md  TOOL_UPDATES.md  agentry.toml  agentry_runner.py  backend_server.py  benchmark_api.py  chat_html_hex.txt  check.py  check_media.py  debug_db.py  diagnostic_test.py  docker-compose.yml  file-icons.js  fix_db_schema.py  frontend_server.py  inspect_memory.py  main.py  mint.json  package.json  products.sql  providers_architecture  providers_architecture.html  pyproject.toml  run_agent.py  simple_usage.py  supabase_schema.sql  temp_chat.html  test_azure_openai_standard.py  (+9 more)
.github/workflows/: ci.yml  deploy-backend.yml  deploy-docs.yml  deploy-frontend.yml  deploy.yml  mintlify-deploy.yml
agentry/: __init__.py  cli.py  gui.py  reloader.py  session_manager.py  user_profile_manager.py
agentry/agents/: agent.py  agent_basic.py  agent_mcp.py  agent_smart.py  copilot.py
agentry/client/: app.py  commands.py  display.py  input.py
agentry/config/: prompts.py  settings.py
agentry/memory/: __init__.py  context_middleware.py  middleware.py  storage.py  vfs.py
agentry/providers/: azure_provider.py  base.py  gemini_provider.py  (+4 more)
api/: agent-class.md
backend/: DEPLOYMENT.md  Dockerfile  __init__.py  config.py  docker-compose.yml  main.py  verify_media_sanity.py
deploy/: build_and_publish.ps1
docs/: 01-birds-eye-view.md  02-quickstart.md  03-how-to-guides.md  04-core-architecture.md  05-api-reference.md  06-memory-judge-system.md  API_DOCUMENTATION.md  API_REFERENCE.md  API_SETUP.md  BASIC_AGENT.md  CHANGELOG.md  CICD.md  COMMAND_STATUS.md  CONTRIBUTING.md  CONTRIBUTING_OLD.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCS.md  FINAL_PREVIEW.md  GAP_ANALYSIS.md  Gemfile  INLINE_RENDERING_UPDATE.md  MCP_AGENT.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SERVER_SETUP.md  QUICKSTART.md  README.md  REQUIREMENTS.md  SETUP_COMPLETE.md  SMART_AGENT.md  TOOL_UPDATES.md  TROUBLESHOOTING_OLD.md  UPDATE_SUMMARY.md  _config.yml  _sidebar.md  api-reference.md  cli-usage.md  core-concepts.md  custom-tools.md  (+12 more)
examples/: README.md  agent_telemetry_example.py  basic_agent_example.py  copilot_agent_example.py  default_agent_example.py  smart_agent_example.py
file_search_agent/: README.md  __init__.py  __main__.py  config.py  requirements.txt
frontend/: package-lock.json
guides/: multi-provider-patterns.md  your-first-agent.md
logicore/: __init__.py  cli.py  execution_summary.py  gui.py  reloader.py  session_manager.py  telemetry.py
scratchy/: __init__.py  cli.py  gui.py  mcp_client.py  reloader.py  session_manager.py  user_profile_manager.py
src/: main.py
tests/: test_backend_api.py  test_credentials.txt  test_results.json  test_websocket_chat.py
ui/: .env.example  ARCHITECTURE.md  README.md  __init__.py  chat-original-backup.html  chat.html  index.html  login.html  orb.html  scratchy_users.db-shm  scratchy_users.db-wal  scratchy_users.db.bak  server.py  setup.html  sw.js  vercel.json
(+222 files in other folders)
