[project]
name = "scratchy"
version = "0.1.0"
description = """
A modular AI agent framework built from scratch in Python, designed to evolve
into a real-time voice-driven assistant for task automation.
"""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.36.0",
    "langchain-community>=0.4.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
]
